discussion/kv_engine/176460/176460_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Separate setMaxDataSize() into components

We'll re-use many of these components in the BucketQuotaChangeTask
in future patches. setMaxDataSize() will remain as-is for the sake
of initial quota setting and unit tests that don't work nicely with
an extra task.

Change-Id: Ie0e229f60ec949df0027094e90996876e318f62e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-07-01 05:50:42.000000000
Message: 
Uploaded patch set 12: Patch Set 11 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-01 06:16:51.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47228/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(837): error C2039: "setBucketQuotaChangeTaskWaitTime": is not a member of "Configuration" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47228/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18463/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:837:27: error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration" [clang-diagnostic-error]
            configuration.setBucketQuotaChangeTaskWaitTime(std::stoul(val));
                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18463/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18463/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39675/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39675/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19566/ : FAILURE

Compile error at [2022-07-01T05:56:44.345Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19566/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20345/ : FAILURE

Compile error at [2022-07-01T05:56:03.598Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20345/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8232/ : FAILURE

Compile error at [2022-07-01T06:16:39.511Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8232/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21334/ : FAILURE

Compile error at [2022-07-01T06:07:48.481Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21334/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28725/ : FAILURE

Compile error at [2022-07-01T06:01:55.024Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28725/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8133/ : FAILURE

Compile error at [2022-07-01T05:53:24.217Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8133/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20694/ : FAILURE

Compile error at [2022-07-01T06:03:14.471Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20694/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17615/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
